--- a/diary.html
+++ b/diary.html
@@ -116,19 +116,21 @@
         </div>
 
         <div id="plus-menu" class="hidden absolute bottom-24 left-1/2 -translate-x-1/2 z-30 w-48 bg-white rounded-xl shadow-lg p-2 space-y-1">
-            <a href="add-food.html" class="flex items-center w-full text-left p-2 rounded-lg text-gray-700 hover:bg-gray-100">
-                <svg class="w-5 h-5 mr-3 text-pink-500" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6m0 0v6m0-6h6m-6 0H6"></path></svg>
-                <span>Add Food</span>
-            </a>
-            <a href="#" class="flex items-center w-full text-left p-2 rounded-lg text-gray-700 hover:bg-gray-100">
-                <svg class="w-5 h-5 mr-3 text-pink-500" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8.684 13.342C8.886 12.938 9 12.482 9 12s-.114-.938-.316-1.342m0 2.684a3 3 0 110-2.684m0 2.684l6.632 3.316m-6.632-6.002l6.632-3.316m0 0a3 3 0 105.367-2.684 3 3 0 00-5.367-2.684zm0 9.367a3 3 0 105.367 2.684 3 3 0 00-5.367-2.684z"></path></svg>
-                <span>Share Food</span>
-            </a>
-            <a href="progress.html" class="flex items-center w-full text-left p-2 rounded-lg text-gray-700 hover:bg-gray-100">
-                <svg class="w-5 h-5 mr-3 text-pink-500" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7h8m0 0v8m0-8l-8 8-4-4-6 6"></path></svg>
-                <span>Progress</span>
-            </a>
-        </div>
+    <a href="add-food.html" class="flex items-center w-full text-left p-2 rounded-lg text-gray-700 hover:bg-gray-100">
+        <svg class="w-5 h-5 mr-3 text-pink-500" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6m0 0v6m0-6h6m-6 0H6"></path></svg>
+        <span>Add Food</span>
+    </a>
+
+    <a href="share-food.html" class="flex items-center w-full text-left p-2 rounded-lg text-gray-700 hover:bg-gray-100">
+        <svg class="w-5 h-5 mr-3 text-pink-500" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8.684 13.342C8.886 12.938 9 12.482 9 12s-.114-.938-.316-1.342m0 2.684a3 3 0 110-2.684m0 2.684l6.632 3.316m-6.632-6.002l6.632-3.316m0 0a3 3 0 105.367-2.684 3 3 0 00-5.367-2.684zm0 9.367a3 3 0 105.367 2.684 3 3 0 00-5.367-2.684z"></path></svg>
+        <span>Share Food</span>
+    </a>
+    
+    <a href="progress.html" class="flex items-center w-full text-left p-2 rounded-lg text-gray-700 hover:bg-gray-100">
+        <svg class="w-5 h-5 mr-3 text-pink-500" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7h8m0 0v8m0-8l-8 8-4-4-6 6"></path></svg>
+        <span>Progress</span>
+    </a>
+</div>
 
         <nav class="absolute bottom-4 left-1/2 -translate-x-1/2 w-[95%] max-w-sm z-20 glass-card grid grid-cols-5 items-center p-2 rounded-2xl">
             <a href="community.html" class="flex flex-col items-center text-gray-600 py-1 hover:text-pink-500">
@@ -153,7 +155,8 @@
         </nav>
 
     </div>
-
+    
+    <script src="nav.js"></script>
     <script src="main.js"></script>
 
 </body>
