--- a/community.html
+++ b/community.html
@@ -8,7 +8,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-
     <style>
         body { font-family: 'Inter', sans-serif; }
         .glass-card {
@@ -55,37 +54,6 @@
                             </div>
                             <p class="mb-3 text-gray-800">Starting the day right with oatmeal, berries, and a sprinkle of chia seeds! 🥣 So delicious and energizing.</p>
                             <img src="https://images.unsplash.com/photo-1585238342024-78d387f4a707?w=500&q=80" alt="Breakfast meal" class="rounded-lg w-full mb-3">
-                            <div class="flex items-center text-gray-500 space-x-6">
-                                <button class="flex items-center space-x-1 hover:text-pink-500 transition-colors">
-                                    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"></path></svg>
-                                    <span class="text-sm">12</span>
-                                </button>
-                                <button class="flex items-center space-x-1 hover:text-pink-500 transition-colors">
-                                    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z"></path></svg>
-                                    <span class="text-sm">5</span>
-                                </button>
-                            </div>
-                        </div>
-                        <div class="glass-card rounded-xl p-4">
-                            <div class="flex items-center mb-3">
-                                <img src="https://i.pravatar.cc/150?u=alex" alt="Avatar" class="w-10 h-10 rounded-full mr-3 border-2 border-white">
-                                <div>
-                                    <p class="font-bold text-gray-800">Alex Ray</p>
-                                    <p class="text-xs text-gray-500">Yesterday at 6:15 PM</p>
-                                </div>
-                            </div>
-                            <p class="mb-3 text-gray-800">Finished my evening run! 🏃‍♂️ Feeling great and ready to crush the week. Who else got their workout in today?</p>
-                            <img src="https://images.unsplash.com/photo-1571019613454-1cb2f99b2d8b?w=500&q=80" alt="Workout photo" class="rounded-lg w-full mb-3">
-                            <div class="flex items-center text-gray-500 space-x-6">
-                                <button class="flex items-center space-x-1 hover:text-pink-500 transition-colors">
-                                    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"></path></svg>
-                                    <span class="text-sm">28</span>
-                                </button>
-                                <button class="flex items-center space-x-1 hover:text-pink-500 transition-colors">
-                                    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z"></path></svg>
-                                    <span class="text-sm">9</span>
-                                </button>
-                            </div>
                         </div>
                     </div>
 
@@ -100,16 +68,6 @@
                             </div>
                             <p class="mb-3 text-gray-800">Today's lunch: Grilled chicken & broccoli. Finally hit my daily protein goal! 💪 <span class="text-pink-500 font-semibold">#healthyeating</span></p>
                             <img src="https://images.unsplash.com/photo-1567011359303-315a1332f483?w=500&q=80" alt="Grilled chicken" class="rounded-lg w-full mb-3">
-                            <div class="flex items-center text-gray-500 space-x-6">
-                                <button class="flex items-center space-x-1 hover:text-pink-500 transition-colors">
-                                    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"></path></svg>
-                                    <span class="text-sm">8</span>
-                                </button>
-                                <button class="flex items-center space-x-1 hover:text-pink-500 transition-colors">
-                                    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z"></path></svg>
-                                    <span class="text-sm">2</span>
-                                </button>
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -117,49 +75,32 @@
         </div>
 
         <div id="plus-menu" class="hidden absolute bottom-24 left-1/2 -translate-x-1/2 z-30 w-48 bg-white rounded-xl shadow-lg p-2 space-y-1">
-    <a href="add-food.html" class="flex items-center w-full text-left p-2 rounded-lg text-gray-700 hover:bg-gray-100">
-        <svg class="w-5 h-5 mr-3 text-pink-500" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6m0 0v6m0-6h6m-6 0H6"></path></svg>
-        <span>Add Food</span>
-    </a>
-
-    <a href="share-food.html" class="flex items-center w-full text-left p-2 rounded-lg text-gray-700 hover:bg-gray-100">
-        <svg class="w-5 h-5 mr-3 text-pink-500" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8.684 13.342C8.886 12.938 9 12.482 9 12s-.114-.938-.316-1.342m0 2.684a3 3 0 110-2.684m0 2.684l6.632 3.316m-6.632-6.002l6.632-3.316m0 0a3 3 0 105.367-2.684 3 3 0 00-5.367-2.684zm0 9.367a3 3 0 105.367 2.684 3 3 0 00-5.367-2.684z"></path></svg>
-        <span>Share Food</span>
-    </a>
-    
-    <a href="progress.html" class="flex items-center w-full text-left p-2 rounded-lg text-gray-700 hover:bg-gray-100">
-        <svg class="w-5 h-5 mr-3 text-pink-500" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7h8m0 0v8m0-8l-8 8-4-4-6 6"></path></svg>
-        <span>Progress</span>
-    </a>
-</div>
-
+            <a href="add-food.html" class="flex items-center w-full text-left p-2 rounded-lg text-gray-700 hover:bg-gray-100">
+                <svg class="w-5 h-5 mr-3 text-pink-500" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6m0 0v6m0-6h6m-6 0H6"></path></svg>
+                <span>Add Food</span>
+            </a>
+            <a href="share-food.html" class="flex items-center w-full text-left p-2 rounded-lg text-gray-700 hover:bg-gray-100">
+                <svg class="w-5 h-5 mr-3 text-pink-500" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8.684 13.342C8.886 12.938 9 12.482 9 12s-.114-.938-.316-1.342m0 2.684a3 3 0 110-2.684m0 2.684l6.632 3.316m-6.632-6.002l6.632-3.316m0 0a3 3 0 105.367-2.684 3 3 0 00-5.367-2.684zm0 9.367a3 3 0 105.367 2.684 3 3 0 00-5.367-2.684z"></path></svg>
+                <span>Share Food</span>
+            </a>
+            <a href="progress.html" class="flex items-center w-full text-left p-2 rounded-lg text-gray-700 hover:bg-gray-100">
+                <svg class="w-5 h-5 mr-3 text-pink-500" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7h8m0 0v8m0-8l-8 8-4-4-6 6"></path></svg>
+                <span>Progress</span>
+            </a>
+        </div>
+        
         <nav class="absolute bottom-4 left-1/2 -translate-x-1/2 w-[95%] max-w-sm z-20 glass-card grid grid-cols-5 items-center p-2 rounded-2xl">
             <a href="community.html" class="flex flex-col items-center text-pink-500 py-1">
                 <svg class="w-6 h-6 mb-1" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z"></path></svg>
                 <span class="text-xs font-bold">Community</span>
             </a>
             <a href="diary.html" class="flex flex-col items-center text-gray-600 py-1 hover:text-pink-500">
-                <svg 
-    xmlns="http://www.w3.org/2000/svg" 
-    class="w-6 h-6 mb-1 rotate-180" 
-    viewBox="0 0 24 24" 
-    stroke-width="2" 
-    stroke="currentColor" 
-    fill="none" 
-    stroke-linecap="round" 
-    stroke-linejoin="round">
-    <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-    <path d="M5 3h4"></path>
-    <path d="M7 3v12"></path>
-    <path d="M4 15h6v3a3 3 0 0 1 -6 0v-3z"></path>
-    <path d="M14 21v-3a3 3 0 0 1 6 0v3"></path>
-    <path d="M17 21v-18"></path>
-</svg>
+                 <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 mb-1 rotate-180" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path d="M5 3h4"></path><path d="M7 3v12"></path><path d="M4 15h6v3a3 3 0 0 1 -6 0v-3z"></path><path d="M14 21v-3a3 3 0 0 1 6 0v3"></path><path d="M17 21v-18"></path></svg>
                 <span class="text-xs">Diary</span>
             </a>
             <button id="plus-button" class="bg-primary-gradient text-white w-14 h-14 rounded-full flex items-center justify-center shadow-lg -mt-6 transform hover:scale-110">
-    <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6m0 0v6m0-6h6m-6 0H6"></path></svg>
-</button>
+                <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6m0 0v6m0-6h6m-6 0H6"></path></svg>
+            </button>
             <a href="#" class="flex flex-col items-center text-gray-600 py-1 hover:text-pink-500">
                 <svg class="w-6 h-6 mb-1" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2H6a2 2 0 01-2-2V6zM14 6a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2V6zM4 16a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2H6a2 2 0 01-2-2v-2zM14 16a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2v-2z"></path></svg>
                 <span class="text-xs">Dummy</span>
@@ -169,11 +110,8 @@
                 <span class="text-xs">Profile</span>
             </a>
         </nav>
-
     </div>
 
-    <script src="nav.js"></script>
-    <script src="community.js"></script>
-
+    <script src="main.js"></script>
 </body>
 </html>
