--- a/community.html
+++ b/community.html
@@ -55,6 +55,28 @@
                             <p class="mb-3 text-gray-800">Starting the day right with oatmeal, berries, and a sprinkle of chia seeds! 🥣 So delicious and energizing.</p>
                             <img src="https://images.unsplash.com/photo-1585238342024-78d387f4a707?w=500&q=80" alt="Breakfast meal" class="rounded-lg w-full mb-3">
                         </div>
+
+                        <div class="glass-card rounded-xl p-4">
+    <div class="flex items-center mb-3">
+        <img src="https://i.pravatar.cc/150?u=johnsmith" alt="Avatar" class="w-10 h-10 rounded-full mr-3 border-2 border-white">
+        <div>
+            <p class="font-bold text-gray-800">John Smith</p>
+            <p class="text-xs text-gray-500">5 hours ago</p>
+        </div>
+    </div>
+    <p class="mb-3 text-gray-800">Perfectly grilled salmon for dinner tonight. Packed with protein and omega-3s. Healthy and delicious! 🐟</p>
+    <img src="https://images.unsplash.com/photo-1519708227418-c8fd9a32b7a2?w=500&q=80" alt="Grilled salmon meal" class="rounded-lg w-full mb-3">
+    <div class="flex items-center text-gray-500 space-x-6">
+        <button class="flex items-center space-x-1 hover:text-pink-500 transition-colors">
+            <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"></path></svg>
+            <span class="text-sm">31</span>
+        </button>
+        <button class="flex items-center space-x-1 hover:text-pink-500 transition-colors">
+            <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z"></path></svg>
+            <span class="text-sm">7</span>
+        </button>
+    </div>
+</div>
                     </div>
 
                     <div id="feed-friends" class="hidden space-y-5">
