--- a/create-custom-post.html
+++ b/create-custom-post.html
@@ -21,13 +21,8 @@
                 </div>
                 <div class="flex-grow overflow-y-auto -mr-2 pr-2 pb-4 space-y-4">
                     <div>
-                        <label class="text-sm text-gray-500">Food to be shared:</label>
-                        <div id="food-to-share" class="p-3 bg-gray-100 rounded-lg mt-1">
-                            </div>
-                    </div>
-                    <div>
                         <label for="caption" class="text-sm text-gray-500">Caption</label>
-                        <textarea id="caption" rows="3" class="w-full p-3 border rounded-lg mt-1" placeholder="Write something..."></textarea>
+                        <textarea id="caption" rows="4" class="w-full p-3 border rounded-lg mt-1" placeholder="What's on your mind?"></textarea>
                     </div>
                     <div>
                         <label class="text-sm text-gray-500">Add Photo (Optional)</label>
@@ -38,18 +33,11 @@
                             </div>
                         </div>
                     </div>
-                    <div>
-                        <label class="text-sm text-gray-500">Share with</label>
-                        <select class="w-full p-3 border rounded-lg mt-1 bg-white">
-                            <option>Friends</option>
-                            <option>Public</option>
-                        </select>
-                    </div>
-                    <button id="final-share-btn" class="w-full bg-pink-500 text-white font-bold py-3 rounded-lg">Share</button>
+                    <button id="post-custom-btn" class="w-full bg-pink-500 text-white font-bold py-3 rounded-lg">Share Post</button>
                 </div>
             </div>
         </div>
     </div>
-    <script src="share.js"></script>
+    <script src="custom-post.js"></script>
 </body>
 </html>
