--- a/community.html
+++ b/community.html
@@ -29,9 +29,13 @@
             <div class="absolute bottom-0 -right-16 w-72 h-72 bg-purple-300 rounded-full opacity-30 filter blur-3xl"></div>
             
             <div class="relative z-10 flex flex-col flex-grow h-full px-6 pt-8">
-                <div class="relative flex items-center justify-center mb-4 h-8 flex-shrink-0">
-                    <h1 class="text-2xl font-bold text-gray-900">Community</h1>
-                </div>
+                <div class="flex justify-between items-center mb-4 h-8 flex-shrink-0">
+    <div class="w-10"></div> <h1 class="text-2xl font-bold text-gray-900">Community</h1>
+    <button class="p-2 text-gray-600 rounded-full relative hover:bg-white/30">
+        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9"></path></svg>
+        <span class="absolute top-1 right-1 block h-2 w-2 rounded-full bg-pink-500 ring-2 ring-gray-50"></span>
+    </button>
+</div>
 
                 <div class="flex border-b-2 border-gray-200 mb-4 flex-shrink-0">
                     <button id="tab-explore" class="flex-1 text-center font-semibold py-3 border-b-2 border-pink-500 text-pink-500 transition-colors duration-300">
@@ -101,9 +105,9 @@
                 <svg class="w-5 h-5 mr-3 text-pink-500" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6m0 0v6m0-6h6m-6 0H6"></path></svg>
                 <span>Add Food</span>
             </a>
-            <a href="share-food.html" class="flex items-center w-full text-left p-2 rounded-lg text-gray-700 hover:bg-gray-100">
+            <a href="create.html" class="flex items-center w-full text-left p-2 rounded-lg text-gray-700 hover:bg-gray-100">
                 <svg class="w-5 h-5 mr-3 text-pink-500" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8.684 13.342C8.886 12.938 9 12.482 9 12s-.114-.938-.316-1.342m0 2.684a3 3 0 110-2.684m0 2.684l6.632 3.316m-6.632-6.002l6.632-3.316m0 0a3 3 0 105.367-2.684 3 3 0 00-5.367-2.684zm0 9.367a3 3 0 105.367 2.684 3 3 0 00-5.367-2.684z"></path></svg>
-                <span>Share Food</span>
+                <span>Create Post</span>
             </a>
             <a href="progress.html" class="flex items-center w-full text-left p-2 rounded-lg text-gray-700 hover:bg-gray-100">
                 <svg class="w-5 h-5 mr-3 text-pink-500" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7h8m0 0v8m0-8l-8 8-4-4-6 6"></path></svg>
@@ -135,5 +139,6 @@
     </div>
 
     <script src="main.js"></script>
+    <script src="community.js"></script>
 </body>
 </html>
