--- a/add-food-details.html
+++ b/add-food-details.html
@@ -81,6 +81,6 @@
         </div>
     </div>
     
-    <script src="main.js"></script>
+    <script src="add-food-details.js"></script>
 </body>
 </html>
