--- a/community.html
+++ b/community.html
@@ -31,10 +31,10 @@
             <div class="relative z-10 flex flex-col flex-grow h-full px-6 pt-8">
                 <div class="flex justify-between items-center mb-4 h-8 flex-shrink-0">
     <div class="w-10"></div> <h1 class="text-2xl font-bold text-gray-900">Community</h1>
-    <button class="p-2 text-gray-600 rounded-full relative hover:bg-white/30">
-        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9"></path></svg>
-        <span class="absolute top-1 right-1 block h-2 w-2 rounded-full bg-pink-500 ring-2 ring-gray-50"></span>
-    </button>
+    <a href="notifications.html" class="p-2 text-gray-600 rounded-full relative hover:bg-white/30">
+    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9"></path></svg>
+    <span class="absolute top-1 right-1 block h-2 w-2 rounded-full bg-pink-500 ring-2 ring-gray-50"></span>
+</a>
 </div>
 
                 <div class="flex border-b-2 border-gray-200 mb-4 flex-shrink-0">
@@ -84,18 +84,48 @@
                     </div>
 
                     <div id="feed-friends" class="hidden space-y-5">
-                        <div class="glass-card rounded-xl p-4">
-                            <div class="flex items-center mb-3">
-                                <img src="https://i.pravatar.cc/150?u=budi" alt="Avatar" class="w-10 h-10 rounded-full mr-3 border-2 border-white">
-                                <div>
-                                    <p class="font-bold text-gray-800">Budi Santoso</p>
-                                    <p class="text-xs text-gray-500">30 minutes ago</p>
-                                </div>
-                            </div>
-                            <p class="mb-3 text-gray-800">Today's lunch: Grilled chicken & broccoli. Finally hit my daily protein goal! 💪 <span class="text-pink-500 font-semibold">#healthyeating</span></p>
-                            <img src="https://images.unsplash.com/photo-1567011359303-315a1332f483?w=500&q=80" alt="Grilled chicken" class="rounded-lg w-full mb-3">
-                        </div>
-                    </div>
+    <!-- Post 1 (Baru) -->
+    <div class="glass-card rounded-xl p-4">
+        <div class="flex items-center mb-3">
+            <img src="https://i.pravatar.cc/150?u=budi" alt="Avatar" class="w-10 h-10 rounded-full mr-3 border-2 border-white">
+            <div>
+                <p class="font-bold text-gray-800">Budi Santoso</p>
+                <p class="text-xs text-gray-500">30 minutes ago</p>
+            </div>
+        </div>
+        <p class="mb-3 text-gray-800">Craving something warm and savory. This bowl of ramen is hitting the spot perfectly! 🍜 <span class="text-pink-500 font-semibold">#comfortfood</span></p>
+        <img src="https://images.unsplash.com/photo-1591814468924-caf88d1232e1?w=500&q=80" alt="Bowl of Ramen" class="rounded-lg w-full mb-3">
+    </div>
+
+    <!-- Post 2 (Baru) -->
+    <div class="glass-card rounded-xl p-4">
+        <div class="flex items-center mb-3">
+            <img src="https://i.pravatar.cc/150?u=siti" alt="Avatar" class="w-10 h-10 rounded-full mr-3 border-2 border-white">
+            <div>
+                <p class="font-bold text-gray-800">Siti Aisyah</p>
+                <p class="text-xs text-gray-500">1 hour ago</p>
+            </div>
+        </div>
+        <p class="mb-3 text-gray-800">Taco Tuesday! Loaded with fresh ingredients. So colorful and delicious. 🌮</p>
+        <img src="https://images.unsplash.com/photo-1565299624946-b28f40a0ae38?w=500&q=80" alt="Tacos" class="rounded-lg w-full mb-3">
+    </div>
+
+    <!-- Post 3 (Dipertahankan dari sebelumnya) -->
+    <div class="glass-card rounded-xl p-4">
+        <div class="flex items-center mb-3">
+            <img src="https://i.pravatar.cc/150?u=doni" alt="Avatar" class="w-10 h-10 rounded-full mr-3 border-2 border-white">
+            <div>
+                <p class="font-bold text-gray-800">Doni Prasetyo</p>
+                <p class="text-xs text-gray-500">Yesterday</p>
+            </div>
+        </div>
+        <p class="mb-3 text-gray-800">Pancakes for a weekend treat! Drizzled with a little bit of honey. 🥞 <span class="text-pink-500 font-semibold">#weekend #pancakes</span></p>
+        <img src="https://images.unsplash.com/photo-1528207776546-365bb710ee93?w=500&q=80" alt="Pancakes" class="rounded-lg w-full mb-3">
+    </div>
+</div>
+
+
+
                 </div>
             </div>
         </div>
