--- a/marketplace.html
+++ b/marketplace.html
@@ -204,7 +204,7 @@
         <span class="text-xs font-bold">Marketplace</span>
     </a>
     <!-- Profile Link -->
-    <a href="#" class="flex flex-col items-center text-gray-600 py-1 hover:text-pink-500">
+    <a href="profile.html" class="flex flex-col items-center text-gray-600 py-1 hover:text-pink-500">
         <svg class="w-6 h-6 mb-1" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"></path></svg>
         <span class="text-xs">Profile</span>
     </a>
