--- a/profile.html
+++ b/profile.html
@@ -57,7 +57,7 @@
                 <div class="px-6 space-y-3">
                     <h3 class="text-xs font-bold text-gray-400 uppercase tracking-wider">Settings</h3>
                     <div class="bg-white/50 rounded-xl p-2 space-y-1">
-                        <a href="#" class="flex items-center p-3 hover:bg-gray-200/50 rounded-lg transition-colors">
+                        <a href="edit-profile.html" class="flex items-center p-3 hover:bg-gray-200/50 rounded-lg transition-colors">
                             <span class="text-lg">✏️</span>
                             <span class="ml-4 font-semibold">Edit Profile</span>
                             <span class="ml-auto text-gray-400">&gt;</span>
