--- a/diary.html
+++ b/diary.html
@@ -73,7 +73,7 @@
                         <div class="flex items-center">
                             <img src="./ASSET/spoon-and-fork.png" alt="Cutlery icon" class="w-6 h-6 mr-2">
                             <span id="calories-consumed" class="font-bold text-gray-900">0</span>
-                            <span class="font-bold text-gray-900">/ 1836</span>
+                            <span id="calories-goal" class="font-bold text-gray-900">/ 1836</span>
                         </div>
                         <span class="text-pink-500 font-semibold">Calories</span>
                     </div>
