--- a/coach-profile.html
+++ b/coach-profile.html
@@ -22,7 +22,7 @@
             
             <div class="relative z-10 flex-grow overflow-y-auto pb-24">
                 <div class="p-4 flex items-center space-x-4 absolute top-0 left-0 w-full z-20">
-                    <a href="marketplace.html" aria-label="Back to marketplace" class="p-2 bg-white/50 rounded-full backdrop-blur-sm shadow">
+                    <a id="back-link" href="marketplace.html" aria-label="Back to marketplace" class="p-2 bg-white/50 rounded-full backdrop-blur-sm shadow">
                         <svg class="w-5 h-5 text-gray-800" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"></path></svg>
                     </a>
                 </div>
