--- a/profile.html
+++ b/profile.html
@@ -75,7 +75,7 @@
                         </a>
                     </div>
                     <div class="bg-white/50 rounded-xl p-2 mt-4">
-                         <a href="#" class="flex items-center p-3 text-red-500 hover:bg-red-100/50 rounded-lg transition-colors">
+                         <a id="logout-button" href="#" class="flex items-center p-3 text-red-500 hover:bg-red-100/50 rounded-lg transition-colors">
                             <span class="text-lg">🚪</span>
                             <span class="ml-4 font-semibold">Log Out</span>
                         </a>
