--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
                     <div class="space-y-4 pt-12 w-full">
                         <button onclick="showScreen(1)" class="w-full bg-primary-gradient text-white font-bold py-3 px-4 rounded-xl shadow-lg hover:opacity-90 transition-opacity">Get Started</button>
                         <button onclick="window.location.href='diary.html'" class="w-full glass-card text-pink-500 font-bold py-3 px-4 rounded-xl hover:bg-white/50 transition-colors">Log In As User (Demo)</button>
-                        <button onclick="window.location.href='./coach-stuff/coach-dashboard.html'" class="w-full glass-card text-pink-500 font-bold py-3 px-4 rounded-xl hover:bg-white/50 transition-colors">Log In As Coach (Demo)</button>
+                        <button onclick="window.location.href='./coach-stuff/coach-dashboard.html'" class="w-full glass-card text-pink-500 font-bold py-3 px-4 rounded-xl hover:bg-white/50 transition-colors">Log In As Coach (Demo) - mobile version</button>
+                         <button onclick="window.location.href='./coach-desktop/coach-dashboard-desktop.html'" class="w-full glass-card text-pink-500 font-bold py-3 px-4 rounded-xl hover:bg-white/50 transition-colors">Log In As Coach (Demo) - Desktop version</button>
                     </div>
                 </div>
 
