--- a/add-food.html
+++ b/add-food.html
@@ -51,7 +51,7 @@
                 </form>
 
                 <div class="flex border-b border-gray-200 mb-4 flex-shrink-0">
-                    <button id="subtab-all" class="flex-1 text-center font-semibold py-2 border-b-2">Search / History</button>
+                    <button id="subtab-all" class="flex-1 text-center font-semibold py-2 border-b-2">All Food</button>
                     <button id="subtab-my" class="flex-1 text-center font-semibold py-2 border-b-2">My Food</button>
                     <button id="subtab-quick" class="flex-1 text-center font-semibold py-2 border-b-2">Quick Add</button>
                 </div>
@@ -76,7 +76,7 @@
 
                 <div id="create-food-button-wrapper" class="hidden">
                     <a href="create-food.html" class="absolute bottom-24 left-6 right-6 z-20 block w-auto text-center bg-pink-500 text-white font-bold py-3 rounded-lg hover:bg-pink-600 shadow-lg transition-transform hover:scale-105">
-                        Buat Makanan Baru (+)
+                        Create New Food (+)
                     </a>
                 </div>
             </div>
