--- a/coach-desktop/coach-messages-desktop.html
+++ b/coach-desktop/coach-messages-desktop.html
@@ -79,18 +79,17 @@
                 <h2 class="text-xl font-semibold">Select a conversation</h2><p>Choose a conversation from the list to view messages.</p>
             </div>
             <div id="dm-chat-window" class="hidden flex flex-col h-full">
-                <header class="p-4 flex-shrink-0 border-b border-gray-200 flex items-center bg-white/80 backdrop-blur-sm">
-                    <img id="client-avatar" src="" class="w-10 h-10 rounded-full object-cover mr-3">
-                    <div><h1 id="client-name" class="font-bold text-gray-900"></h1><p class="text-xs text-green-500 font-semibold">Online</p></div>
-                </header>
-                <main id="chat-container-dm" class="flex-grow overflow-y-auto p-4 space-y-4"></main>
-                <footer class="p-4 bg-white border-t border-gray-200 flex-shrink-0">
-                    <form id="message-form-dm" class="flex items-center space-x-3">
-                        <input type="text" id="message-input-dm" class="w-full bg-gray-100 border-2 border-gray-200 rounded-full py-2.5 px-4 focus:outline-none focus:border-pink-400 transition" placeholder="Type a message..." autocomplete="off">
-                        <button type="submit" class="bg-primary-gradient text-white w-11 h-11 rounded-full flex-shrink-0 flex items-center justify-center shadow-lg hover:opacity-90 transition"><svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg></button>
-                    </form>
-                </footer>
-            </div>
+    <header class="p-4 flex-shrink-0 border-b border-gray-200 flex items-center bg-white/80 backdrop-blur-sm">
+        <img id="client-avatar" src="" class="w-10 h-10 rounded-full object-cover mr-3">
+        <div><h1 id="client-name" class="font-bold text-gray-900"></h1><p class="text-xs text-green-500 font-semibold">Online</p></div>
+    </header>
+
+    <div id="dm-request-info" class="hidden p-3 border-b border-sky-200 bg-sky-50 text-center">
+        </div>
+    <main id="chat-container-dm" class="flex-grow overflow-y-auto p-4 space-y-4"></main>
+    <footer class="p-4 bg-white border-t border-gray-200 flex-shrink-0">
+        </footer>
+</div>
             <div id="group-chat-window" class="hidden flex flex-col h-full">
                 <header class="flex items-center p-4 border-b border-gray-200 flex-shrink-0 z-10 bg-white/80 backdrop-blur-sm">
                     <img id="group-avatar" src="" class="w-10 h-10 rounded-full object-cover p-1 bg-gray-200">
