--- a/coach-stuff/chat-view.html
+++ b/coach-stuff/chat-view.html
@@ -13,26 +13,30 @@
 </head>
 <body class="bg-gray-100 flex items-center justify-center min-h-screen p-4">
 
-    <div id="app-container" class="w-full max-w-md mx-auto bg-white rounded-2xl shadow-xl overflow-hidden relative h-[800px]">
-        <div class="relative z-10 flex flex-col h-full">
-            <header class="p-4 flex-shrink-0 border-b border-gray-200 flex items-center bg-white/80 backdrop-blur-sm">
-                <a href="coach-messages.html" class="p-2 text-gray-600 rounded-full mr-3 hover:bg-gray-200/50">
-                    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"></path></svg>
-                </a>
-                <img id="client-avatar" src="" class="w-10 h-10 rounded-full object-cover mr-3">
-                <div>
-                    <h1 id="client-name" class="font-bold text-gray-900"></h1>
-                    <p class="text-xs text-green-500 font-semibold">Online</p>
+    <div class="relative w-full max-w-md h-[800px]">
+        <div id="app-container" class="w-full h-full mx-auto bg-white rounded-2xl shadow-xl overflow-hidden relative flex flex-col">
+            
+            <header class="flex items-center p-4 border-b border-gray-200 flex-shrink-0 z-10 bg-white/80 backdrop-blur-sm">
+    <a id="back-button" href="coach-messages.html" class="text-gray-600 hover:text-pink-500">
+        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"></path></svg>
+    </a>
+    <img id="client-avatar" src="" class="w-10 h-10 rounded-full object-cover ml-4">
+    <div class="ml-3">
+        <h2 id="client-name" class="font-bold text-gray-800"></h2>
+        <p class="text-xs text-green-500 font-semibold">Online</p>
+    </div>
+</header>
+
+            <div id="request-info-banner" class="hidden p-3 bg-sky-100 border-b border-sky-200 text-center">
                 </div>
-            </header>
 
             <main id="chat-container" class="flex-grow overflow-y-auto p-4 space-y-4">
                 </main>
 
-            <footer class="p-4 bg-white border-t border-gray-200 flex-shrink-0">
+            <footer class="p-4 border-t border-gray-200 flex-shrink-0 z-10 bg-white">
                 <form id="message-form" class="flex items-center space-x-3">
-                    <input type="text" id="message-input" class="w-full bg-gray-100 border-2 border-gray-200 rounded-full py-2.5 px-4 focus:outline-none focus:border-pink-400 transition" placeholder="Type a message..." autocomplete="off">
-                    <button type="submit" class="bg-primary-gradient text-white w-11 h-11 rounded-full flex-shrink-0 flex items-center justify-center shadow-lg hover:opacity-90 transition">
+                    <input type="text" id="message-input" placeholder="Type a message..." class="w-full bg-gray-100 rounded-full py-3 px-5 focus:outline-none focus:ring-2 focus:ring-pink-400" autocomplete="off">
+                    <button type="submit" class="bg-primary-gradient text-white rounded-full p-3 flex-shrink-0 transform hover:scale-110 transition-transform">
                         <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg>
                     </button>
                 </form>
@@ -40,6 +44,6 @@
         </div>
     </div>
 
-    <script src="chat-view.js"></script>
-</body>
+    <script src="../data.js"></script>
+    <script src="chat-view.js"></script> </body>
 </html>
